--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -474,15 +474,201 @@ animation: scroll-down 3s infinite;
 }
 
 /*=============== BUTTON ===============*/
+.buttons,
+.button--ghost{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: .5rem;
+}
 
+.buttons{
+  background-color: var(--black-color);
+  padding: 1.1rem 1.5rem;
+  color: var(--white-color);
+  font-weight: var(--font-medium);
+  transition: background-color .4s;
+}
+
+.buttons i{
+  font-size: 1.25rem;
+}
+.buttons:hover{
+  background-color: var(--first-color);
+}
+
+.button--ghost{
+  border: 3px solid var(--black-color);
+  color: var(--black-color);
+  padding: .5rem;
+  transition: border .4s, color .4s;
+}
+
+.button--ghost i{
+  font-size: 1.25rem;
+}
+.button--ghost:hover{
+  border: 3px solid var(--first-color);
+}
 
 /*=============== ABOUT ===============*/
+.about{
+  background-color: var(--container-color);
+  transition: backgroung-color .4s;
+}
 
+.about--container{
+  row-gap: 0;
+}
+.about--profile{
+  position: relative;
+  justify-content: center;
+  margin-block: 2.5rem 4.5rem;
+}
 
+.about--image{
+  width: 220px;
+}
+
+.about--img{
+  position: relative;
+  border: 4px solid var(--white-color);
+  z-index: 1;
+}
+
+.about--shadow,
+.about--line,
+.about--box{
+  position: absolute;
+}
+
+.about--shadow{
+  width: 150px;
+  height: 285px;
+  background-color: var(--body-color);
+  top: -2.5rem;
+  right: -3.5rem; /*in video he put -3.5rem */
+  border-bottom: 4px solid var(--first-color);
+  transition: background-color .4s;
+}
+
+.about--profile .geometric-box{
+  top: 1.5rem;
+  right: -2.8rem; /*in video he put -2.8rem */
+}
+.about--line{
+  filter: invert(1);
+  right: -1.25rem;
+  top: 4rem;
+  width: 50px;
+  transition: filter .4s;
+}
+
+.about--box{
+  width: 40px;
+  height: 40px;
+  background-color: var(--first-color);
+  right: -.5rem;
+  bottom: .5rem;
+}
+
+.about--info{
+  padding-left: 1.25rem;
+}
+.about--description{
+  position: relative;
+  color: var(--title-color);
+  margin-bottom: 1.5rem;
+}
+
+.about--description::after{
+  content: '';
+  width: 20px;
+  height: 1px;
+  background-color: var(--title-color);
+  position: absolute;
+  left: -1.75rem;
+  top: .5rem;
+}
+
+.about--list{
+  list-style: square;
+  color: var(--title-color);
+  margin-bottom: 3rem;
+}
+
+.about--buttons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1rem;
+}
 /*=============== SERVICES ===============*/
+.services--container{
+  grid-template-columns: 250px;
+  justify-content: center;
+  row-gap: 2rem;
+  padding-top: 1rem;
+}
 
+.services--card{
+  position: relative;
+}
+
+.services--content{
+  height: 100%;
+  background-color: var(--body-color);
+  border: 4px solid var(--black-color);
+padding: 6rem 1rem 3rem;
+z-index: 5;
+position: relative;
+transition: background-color .4s,border .4s;
+
+}
+.services--border{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 4px solid var(--first-color);
+  top: 0;
+  left: 0;
+  transition: transform .4s;
+}
+
+.services--card:hover .services--border{
+  transform: translate(.75rem, .75rem);
+}
+
+.services--icon{
+  position: relative;
+  display: inline-block;
+}
+
+.services--icon i{
+  font-size: 2rem;
+  color: var(--black-color);
+  position: relative;
+  z-index: 5;
+}
+.services--box{
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  background-color: var(--first-color);
+  right: -2px;
+  top: -2px;
+}
+
+.services--title{
+  font-size: var(--h2-font-size);
+  margin-bottom: 1.25rem;
+}
 
 /*=============== PROJECTS ===============*/
+.projects{
+  background-color: var(--container-color);
+  transition: background-color .4s;
+}
 
 
 /*=============== CONTACT ===============*/
