--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -320,7 +320,7 @@ img {
 }
 
 /* Add shadow header */
-.shadow-header{
+.shadow-header {
   box-shadow: 0 1px 16px hsla(0, 0%, 0%, .12);
 }
 
@@ -444,30 +444,32 @@ img {
   color: var(--white-color);
   width: 36px;
   height: 36px;
-display: grid;
-place-items: center;
-font-size: 1rem;
-cursor: pointer;
-overflow: hidden;
-transition: background-color .4s;
+  display: grid;
+  place-items: center;
+  font-size: 1rem;
+  cursor: pointer;
+  overflow: hidden;
+  transition: background-color .4s;
 }
 
-.home-scroll-box i{
-animation: scroll-down 3s infinite;
+.home-scroll-box i {
+  animation: scroll-down 3s infinite;
 }
 
 
 /* Animate scroll icon */
-@keyframes scroll-down{
-  0%{
+@keyframes scroll-down {
+  0% {
     transform: translateY(-1rem);
     opacity: 0;
   }
-  50%{
+
+  50% {
     transform: translateY(0);
     opacity: 1;
   }
-  100%{
+
+  100% {
     transform: translateY(.6rem);
     opacity: 0;
   }
@@ -475,14 +477,14 @@ animation: scroll-down 3s infinite;
 
 /*=============== BUTTON ===============*/
 .buttons,
-.button--ghost{
+.button--ghost {
   display: flex;
   align-items: center;
   justify-content: center;
   column-gap: .5rem;
 }
 
-.buttons{
+.buttons {
   background-color: var(--black-color);
   padding: 1.1rem 1.5rem;
   color: var(--white-color);
@@ -490,47 +492,50 @@ animation: scroll-down 3s infinite;
   transition: background-color .4s;
 }
 
-.buttons i{
+.buttons i {
   font-size: 1.25rem;
 }
-.buttons:hover{
+
+.buttons:hover {
   background-color: var(--first-color);
 }
 
-.button--ghost{
+.button--ghost {
   border: 3px solid var(--black-color);
   color: var(--black-color);
   padding: .5rem;
   transition: border .4s, color .4s;
 }
 
-.button--ghost i{
+.button--ghost i {
   font-size: 1.25rem;
 }
-.button--ghost:hover{
+
+.button--ghost:hover {
   border: 3px solid var(--first-color);
 }
 
 /*=============== ABOUT ===============*/
-.about{
+.about {
   background-color: var(--container-color);
   transition: backgroung-color .4s;
 }
 
-.about--container{
+.about--container {
   row-gap: 0;
 }
-.about--profile{
+
+.about--profile {
   position: relative;
   justify-content: center;
   margin-block: 2.5rem 4.5rem;
 }
 
-.about--image{
+.about--image {
   width: 220px;
 }
 
-.about--img{
+.about--img {
   position: relative;
   border: 4px solid var(--white-color);
   z-index: 1;
@@ -538,25 +543,28 @@ animation: scroll-down 3s infinite;
 
 .about--shadow,
 .about--line,
-.about--box{
+.about--box {
   position: absolute;
 }
 
-.about--shadow{
+.about--shadow {
   width: 150px;
   height: 285px;
   background-color: var(--body-color);
   top: -2.5rem;
-  right: -3.5rem; /*in video he put -3.5rem */
+  right: -3.5rem;
+  /*in video he put -3.5rem */
   border-bottom: 4px solid var(--first-color);
   transition: background-color .4s;
 }
 
-.about--profile .geometric-box{
+.about--profile .geometric-box {
   top: 1.5rem;
-  right: -2.8rem; /*in video he put -2.8rem */
+  right: -2.8rem;
+  /*in video he put -2.8rem */
 }
-.about--line{
+
+.about--line {
   filter: invert(1);
   right: -1.25rem;
   top: 4rem;
@@ -564,7 +572,7 @@ animation: scroll-down 3s infinite;
   transition: filter .4s;
 }
 
-.about--box{
+.about--box {
   width: 40px;
   height: 40px;
   background-color: var(--first-color);
@@ -572,16 +580,17 @@ animation: scroll-down 3s infinite;
   bottom: .5rem;
 }
 
-.about--info{
+.about--info {
   padding-left: 1.25rem;
 }
-.about--description{
+
+.about--description {
   position: relative;
   color: var(--title-color);
   margin-bottom: 1.5rem;
 }
 
-.about--description::after{
+.about--description::after {
   content: '';
   width: 20px;
   height: 1px;
@@ -591,41 +600,43 @@ animation: scroll-down 3s infinite;
   top: .5rem;
 }
 
-.about--list{
+.about--list {
   list-style: square;
   color: var(--title-color);
   margin-bottom: 3rem;
 }
 
-.about--buttons{
+.about--buttons {
   display: flex;
   justify-content: center;
   align-items: center;
   column-gap: 1rem;
 }
+
 /*=============== SERVICES ===============*/
-.services--container{
+.services--container {
   grid-template-columns: 250px;
   justify-content: center;
   row-gap: 2rem;
   padding-top: 1rem;
 }
 
-.services--card{
+.services--card {
   position: relative;
 }
 
-.services--content{
+.services--content {
   height: 100%;
   background-color: var(--body-color);
   border: 4px solid var(--black-color);
-padding: 6rem 1rem 3rem;
-z-index: 5;
-position: relative;
-transition: background-color .4s,border .4s;
+  padding: 6rem 1rem 3rem;
+  z-index: 5;
+  position: relative;
+  transition: background-color .4s, border .4s;
 
 }
-.services--border{
+
+.services--border {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -635,22 +646,23 @@ transition: background-color .4s,border .4s;
   transition: transform .4s;
 }
 
-.services--card:hover .services--border{
+.services--card:hover .services--border {
   transform: translate(.75rem, .75rem);
 }
 
-.services--icon{
+.services--icon {
   position: relative;
   display: inline-block;
 }
 
-.services--icon i{
+.services--icon i {
   font-size: 2rem;
   color: var(--black-color);
   position: relative;
   z-index: 5;
 }
-.services--box{
+
+.services--box {
   position: absolute;
   width: 24px;
   height: 24px;
@@ -659,25 +671,310 @@ transition: background-color .4s,border .4s;
   top: -2px;
 }
 
-.services--title{
+.services--title {
   font-size: var(--h2-font-size);
   margin-bottom: 1.25rem;
 }
 
 /*=============== PROJECTS ===============*/
-.projects{
+.projects {
   background-color: var(--container-color);
   transition: background-color .4s;
 }
 
+.projects--container {
+  row-gap: 2rem;
+}
+
+.projects--card {
+  padding: 1rem 1rem 2rem;
+  transition: background-color .4s;
+
+}
+
+.projects--image {
+  position: relative;
+  margin-bottom: .75rem;
+
+}
+
+.projects--button {
+  position: absolute;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  right: 1rem;
+  bottom: -1.5rem;
+  padding: 1rem;
+}
+
+.projects--content {
+  margin-bottom: 1.25rem;
+
+}
+
+.projects--subtitle {
+  position: relative;
+  display: inline-block;
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  color: var(--text-color);
+  margin-bottom: .75rem;
+  padding-left: 1.75rem;
+}
+
+.projects--subtitle::after {
+  content: '';
+  width: 20px;
+  height: 1px;
+  background-color: var(--text-color);
+  position: absolute;
+  top: 50%;
+  left: 0;
+}
+
+.projects--title {
+  font-size: var(--h3-font-size);
+  margin-bottom: .75rem;
+}
+
+.projects--buttons {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.projects-link{
+  display: flex;
+align-items: center;
+  column-gap: .25rem;
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  transition: color .4s;
+}
+
+
+
+
+.projects-link i{
+  font-size: 1rem;
+  color: var(--title-color);
+  transition: color .4s;
+}
+.projects-link:hover,
+.projects-link i:hover{
+  color: var(--first-color);
+}
+
+
+.projects--card:hover{
+  background-color: var(--white-color);
+}
+
+
+
+
 
 /*=============== CONTACT ===============*/
+.contact{
+  padding-bottom: 0;
+}
 
+.contact--container{
+  position: relative;
+  grid-template-rows: 300px max-content max-content;
+  row-gap: 0;
+}
+
+.contact--data{
+  position: relative;
+  width: 300px;
+  height: 300px;
+  background-color: var(--container-color);
+  padding: 3rem 1.5rem 3.5rem;
+  margin-left: auto;
+  border-bottom: 4px solid var(--first-color);
+  z-index: 5;
+  transition: backgroung-color .4s;
+}
+
+.contact--data .section--title-2{
+  margin: 0 0 1.5rem;
+  transform: translateX(-3rem);
+}
+
+.contact--description-1{
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  margin-bottom: 2rem;
+}
+
+.contact--description-2{
+  color: var(--title-color);
+  font-weight: var(--small-font-size);
+ 
+}
+
+.contact--data .geometric-box{
+  top: 2rem;
+  right: 2.5rem;
+}
+
+.contact--mail{
+  position: relative;
+  background-color: var(--black-color);
+  padding: 5rem 1.5rem 2.5rem;
+  margin-top: -2.5rem;
+transition: background-color .4s;
+}
+
+.contact--title{
+  color: var(--white-color);
+  font-size: var(--h2-font-size);
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.contact--form,
+.contact--group{
+  display: grid;
+  row-gap: 1.25rem;
+}
+
+.contact--form{
+  position: relative;
+}
+
+.contact--box{
+  position: relative;
+  width: 100%;
+  height: 58px;
+}
+
+.contact--input,
+.contact--button{
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  outline: none;
+  border: none;
+}
+
+.contact--input{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--black-color);
+  border: 3px solid var(--black-color-light);
+  color: var(--white-color);
+  padding: .5rem 1rem;
+  font-weight: var(--font-medium);
+  transition: border .4s, background-color .4s;
+}
+
+.contact--input::placeholder{
+  color: var(--text-color-light);
+  transition: opacity .4s;
+}
+
+.contact--input:focus{
+  border: 3px solid var(--white-color);
+}
+
+.contact--label{
+  position: absolute;
+  top: 8px;
+  left: 10px;
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  background-color: var(--black-color);
+  padding: 8px;
+  pointer-events: none;
+  transition: top .4s, background-color .4s;
+  opacity: 0;
+}
+
+.contact--form .contact--area{
+  height: 10rem;
+}
+
+.contact--area textarea{
+  resize: none;
+  padding-top: 1rem;
+}
+
+.contact--button{
+  background-color: var(--first-color);
+  cursor: pointer;
+}
 
 /* Opaque placeholder */
-
+.contact--input:focus::placeholder{
+  opacity: 0;
+}
 
 /* Move label up & sticky label */
+.contact--input:focus + .contact--label,
+.contact--input:not(:placeholder-shown).contact--input:not(:focus) + .contact--label{
+  opacity: 1;
+  top: -16px;
+}
+
+.contact--social{
+  display: grid;
+  row-gap: 1rem;
+  background-color: hsl(0, 0%, 10%);
+padding-block: 1rem 2rem ;
+text-align: center;
+}
+
+.contact--social-arrow{
+  width: 32px;
+  margin: 0 auto;
+}
+.contact--social-data{
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
+
+.contact--social-description-1{
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+  margin-bottom: .5rem;
+}
+
+.contact--social-description-2{
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-semi-bold) ;
+}
+.contact--social-links{
+  display: flex;
+  justify-content: center;
+  column-gap:.75rem ;
+}
+.contact--social-link{
+  background-color: var(--black-color-light);
+  padding: 6px;
+  color: var(--white-color);
+  font-size: 1.25rem;
+  display: grid;
+  place-content: center;
+  transition: background-color .3s;
+}
+
+.contact--social-link:hover{
+background-color: var(--first-color);
+}
+
+.contact--message{
+  color: var(--white-color);
+font-size: var(--small-font-size);
+position: absolute;
+bottom: -1.6rem;
+left: 0;
+}
 
 
 /*=============== FOOTER ===============*/
