--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -325,7 +325,13 @@ img {
 }
 
 /* Active link */
+.active-link {
+  color: var(--white-color);
+}
 
+.active-link::after {
+  width: 25%;
+}
 
 /*=============== HOME ===============*/
 .home--container {
@@ -743,9 +749,9 @@ img {
   column-gap: 1rem;
 }
 
-.projects-link{
+.projects-link {
   display: flex;
-align-items: center;
+  align-items: center;
   column-gap: .25rem;
   color: var(--text-color);
   font-size: var(--small-font-size);
@@ -756,18 +762,19 @@ align-items: center;
 
 
 
-.projects-link i{
+.projects-link i {
   font-size: 1rem;
   color: var(--title-color);
   transition: color .4s;
 }
+
 .projects-link:hover,
-.projects-link i:hover{
+.projects-link i:hover {
   color: var(--first-color);
 }
 
 
-.projects--card:hover{
+.projects--card:hover {
   background-color: var(--white-color);
 }
 
@@ -776,17 +783,17 @@ align-items: center;
 
 
 /*=============== CONTACT ===============*/
-.contact{
+.contact {
   padding-bottom: 0;
 }
 
-.contact--container{
+.contact--container {
   position: relative;
   grid-template-rows: 300px max-content max-content;
   row-gap: 0;
 }
 
-.contact--data{
+.contact--data {
   position: relative;
   width: 300px;
   height: 300px;
@@ -798,37 +805,37 @@ align-items: center;
   transition: backgroung-color .4s;
 }
 
-.contact--data .section--title-2{
+.contact--data .section--title-2 {
   margin: 0 0 1.5rem;
   transform: translateX(-3rem);
 }
 
-.contact--description-1{
+.contact--description-1 {
   color: var(--title-color);
   font-weight: var(--font-medium);
   margin-bottom: 2rem;
 }
 
-.contact--description-2{
+.contact--description-2 {
   color: var(--title-color);
   font-weight: var(--small-font-size);
- 
+
 }
 
-.contact--data .geometric-box{
+.contact--data .geometric-box {
   top: 2rem;
   right: 2.5rem;
 }
 
-.contact--mail{
+.contact--mail {
   position: relative;
   background-color: var(--black-color);
   padding: 5rem 1.5rem 2.5rem;
   margin-top: -2.5rem;
-transition: background-color .4s;
+  transition: background-color .4s;
 }
 
-.contact--title{
+.contact--title {
   color: var(--white-color);
   font-size: var(--h2-font-size);
   margin-bottom: 2rem;
@@ -836,30 +843,30 @@ transition: background-color .4s;
 }
 
 .contact--form,
-.contact--group{
+.contact--group {
   display: grid;
   row-gap: 1.25rem;
 }
 
-.contact--form{
+.contact--form {
   position: relative;
 }
 
-.contact--box{
+.contact--box {
   position: relative;
   width: 100%;
   height: 58px;
 }
 
 .contact--input,
-.contact--button{
+.contact--button {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   outline: none;
   border: none;
 }
 
-.contact--input{
+.contact--input {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -871,16 +878,16 @@ transition: background-color .4s;
   transition: border .4s, background-color .4s;
 }
 
-.contact--input::placeholder{
+.contact--input::placeholder {
   color: var(--text-color-light);
   transition: opacity .4s;
 }
 
-.contact--input:focus{
+.contact--input:focus {
   border: 3px solid var(--white-color);
 }
 
-.contact--label{
+.contact--label {
   position: absolute;
   top: 8px;
   left: 10px;
@@ -894,67 +901,70 @@ transition: background-color .4s;
   opacity: 0;
 }
 
-.contact--form .contact--area{
+.contact--form .contact--area {
   height: 10rem;
 }
 
-.contact--area textarea{
+.contact--area textarea {
   resize: none;
   padding-top: 1rem;
 }
 
-.contact--button{
+.contact--button {
   background-color: var(--first-color);
   cursor: pointer;
 }
 
 /* Opaque placeholder */
-.contact--input:focus::placeholder{
+.contact--input:focus::placeholder {
   opacity: 0;
 }
 
 /* Move label up & sticky label */
-.contact--input:focus + .contact--label,
-.contact--input:not(:placeholder-shown).contact--input:not(:focus) + .contact--label{
+.contact--input:focus+.contact--label,
+.contact--input:not(:placeholder-shown).contact--input:not(:focus)+.contact--label {
   opacity: 1;
   top: -16px;
 }
 
-.contact--social{
+.contact--social {
   display: grid;
   row-gap: 1rem;
   background-color: hsl(0, 0%, 10%);
-padding-block: 1rem 2rem ;
-text-align: center;
+  padding-block: 1rem 2rem;
+  text-align: center;
 }
 
-.contact--social-arrow{
+.contact--social-arrow {
   width: 32px;
   margin: 0 auto;
 }
-.contact--social-data{
+
+.contact--social-data {
   display: flex;
   flex-direction: column;
   row-gap: 1.5rem;
 }
 
-.contact--social-description-1{
+.contact--social-description-1 {
   color: var(--text-color-light);
   font-size: var(--small-font-size);
   margin-bottom: .5rem;
 }
 
-.contact--social-description-2{
+.contact--social-description-2 {
   color: var(--text-color-light);
   font-size: var(--small-font-size);
-  font-weight: var(--font-semi-bold) ;
+  font-weight: var(--font-semi-bold);
 }
-.contact--social-links{
+
+.contact--social-links {
   display: flex;
   justify-content: center;
-  column-gap:.75rem ;
+  column-gap: .75rem;
 }
-.contact--social-link{
+
+.contact--social-link {
   background-color: var(--black-color-light);
   padding: 6px;
   color: var(--white-color);
@@ -964,36 +974,509 @@ text-align: center;
   transition: background-color .3s;
 }
 
-.contact--social-link:hover{
-background-color: var(--first-color);
+.contact--social-link:hover {
+  background-color: var(--first-color);
 }
 
-.contact--message{
+.contact--message {
   color: var(--white-color);
-font-size: var(--small-font-size);
-position: absolute;
-bottom: -1.6rem;
-left: 0;
+  font-size: var(--small-font-size);
+  position: absolute;
+  bottom: -1.6rem;
+  left: 0;
 }
 
 
 /*=============== FOOTER ===============*/
+.footer {
+  background-color: var(--black-color);
+}
 
+.footer--container {
+  padding-block: 3rem 2rem;
+  row-gap: 2.5rem;
+}
+
+.footer--links {
+  display: flex;
+  justify-content: center;
+  column-gap: 2rem;
+}
+
+.footer--link {
+  color: var(--white-color);
+  transition: color .4s;
+
+}
+
+.footer--link:hover {
+  color: var(--text-color-light);
+}
+
+.footer--copy {
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+  text-align: center;
+}
+
+.footer--copy a {
+  color: var(--white-color);
+  font-weight: var(--font-medium);
+}
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar {
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(0, 0%, 65%);
+}
 
+::-webkit-scrollbar-thumb {
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(0, 0%, 55%);
+}
+
+::-webkit-scrollbar-thumb:hover {
+
+  background-color: hsl(0, 0%, 45%);
+}
 
 /*=============== SCROLL UP ===============*/
+.scrollup {
+  position: fixed;
+  right: 1rem;
+  bottom: 3rem;
+  background-color: var(--black-color);
+  display: inline-block;
+  padding: 8px;
+  font-size: 1.25rem;
+  color: var(--white-color);
+  z-index: var(--z-tooltip);
+  transition: bottom .4s, transform .4s, background-color .4s;
+}
+
+.scrollup:hover {
+  transform: translateY(-.5rem);
+}
 
 
 /* Show Scroll Up */
-
+.show-scroll {
+  bottom: 3rem;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
+@media screen and (max-width:340px) {
+  .container {
+    margin-inline: 1rem;
+  }
 
+  .home--image {
+    width: 180px;
+  }
+
+  .about--image {
+    width: 180px;
+  }
+
+  .about--shadow {
+    height: 330px;
+    right: -2.5rem;
+  }
+
+  .contact--data {
+    width: 100%;
+  }
+
+  .contact--data .section--title-2 {
+    transform: translateX(0);
+  }
+
+}
 
 /* For medium devices */
+@media screen and (min-width: 576px) {
 
+  .home--container,
+  .about--container,
+  .projects--container {
+    grid-template-columns: 350px;
+    justify-content: center;
+  }
+
+  .contact--data {
+    width: 350px;
+    padding: 4rem 1.5rem;
+    margin-inline: auto;
+  }
+
+  .contact--container {
+    grid-template-columns: 500px;
+    justify-content: center;
+  }
+
+  .contact--group {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem;
+  }
+
+  .contact--social {
+    background-color: transparent;
+  }
+
+  .contact--social-arrow {
+    filter: invert(1);
+  }
+
+  .contact--social-description-1 {
+    color: var(--text-color);
+  }
+
+  .contact--social-description-2 {
+    color: var(--title-color);
+  }
+
+  @media screen and (min-width: 768px) {
+    .services--container {
+      grid-template-columns: repeat(2, 250px);
+    }
+
+    .projects--container {
+      grid-template-columns: repeat(2, 350px);
+    }
+  }
+}
 
 /* For large devices */
+@media screen and (min-width: 1150px) {
+  .container {
+    margin-inline: auto;
+  }
+
+  .section {
+    padding-block: 7rem 2rem;
+  }
+
+  .section--title-1::after,
+  .section--title-2::after {
+    width: 70px;
+    height: 48px;
+  }
+
+  .geometric-box {
+    transform: scale(1.2);
+  }
+
+  .nav {
+    height: calc(var(--header-height) + 2rem);
+    column-gap: 4rem;
+  }
+
+  .nav--close,
+  .nav--toggle,
+  .nav--title,
+  .nav--name {
+    display: none;
+  }
+
+  .nav--list {
+    flex-direction: row;
+    column-gap: 4rem;
+  }
+
+  .nav--menu {
+    margin-left: auto;
+  }
+
+  .nav--link {
+    color: var(--text-color);
+    font-size: var(--normal-font-size);
+  }
+
+  .nav--link:hover {
+    color: var(--title-color);
+  }
+
+  .nav--link::after {
+    background-color: var(--title-color);
+  }
+
+  .active-link {
+    color: var(--title-color);
+  }
+
+  .nav--link-buttonn {
+    background-color: var(--black-color);
+    color: var(--white-color);
+    padding: 1.1rem 1.5rem;
+  }
+
+  .nav--link-buttonn:hover {
+    color: var(--white-color);
+  }
+
+  .nav--link-buttonn::after {
+    background-color: transparent;
+  }
+
+  .home--container {
+    grid-template-columns: repeat(2, 460px);
+    gap: 2rem 4rem;
+    align-items: center;
+    padding-block: 5.5rem;
+  }
+
+  .home--profile {
+    grid-column: 2/3;
+    grid-row: 1/3;
+  }
+
+  .home--image {
+    width: 350px;
+  }
+
+  .home--shadow {
+    right: -1.25rem;
+    bottom: -1.25rem;
+    border: 6px solid var(--black-color);
+  }
+
+  .home--name,
+  .home--description {
+    text-align: initial;
+  }
+
+  .home--name {
+    align-self: flex-end;
+  }
+
+  .home--info {
+    margin-top: 0;
+    align-self: flex-start;
+  }
+
+  .home--description {
+    position: relative;
+    font-size: var(--h2-font-size);
+    margin-bottom: 5.5rem;
+    padding-left: 3rem;
+  }
+
+  .home--description::after {
+    content: '';
+    width: 32px;
+    height: 2px;
+    background-color: var(--title-color);
+    position: absolute;
+    left: 0;
+    top: 14px;
+  }
+
+  .home--arrow {
+    top: 4.5rem;
+    left: -8rem;
+    rotate: 80deg;
+    width: 50px;
+  }
+
+  .home--line {
+    left: -15rem;
+    bottom: -4rem;
+    width: 80px;
+    rotate: 40deg;
+  }
+
+  .home--social {
+    left: initial;
+    right: -6rem;
+  }
+
+  .home--social-link {
+    font-size: 1.5rem;
+    padding: .5rem;
+  }
+
+  .about--container {
+    grid-template-columns: 440px 525px;
+    gap: 1rem 9rem;
+    align-items: center;
+    padding-block: 1rem;
+
+  }
+
+  .about--profile {
+    order: -1;
+    grid-row: 1/3;
+  }
+
+  .about--image {
+    width: 350px;
+  }
+
+  .about--img {
+    border: 8px solid var(--white-color);
+  }
+
+  .about--shadow {
+    width: 240px;
+    height: 615px;
+    top: -4px;
+    right: -5.5rem;
+    border-bottom: 6px solid var(--first-color);
+  }
+
+  .about--profile .geometric-box {
+    right: -4rem;
+    top: 4.5rem;
+  }
+
+  .about--line {
+    width: 80px;
+    right: -2rem;
+    top: 10rem;
+  }
+
+  .about--box {
+    width: 64px;
+    height: 64px;
+    right: -0.75rem;
+  }
+
+  .about--container .section--title-1 {
+    align-self: flex-end;
+    margin-inline: 0;
+  }
+
+  .about--info {
+    align-self: flex-start;
+    padding-left: 3rem;
+  }
+
+  .about--description {
+    font-size: var(--h2-font-size);
+    margin-bottom: 2rem;
+  }
+
+  .about--description::after {
+    width: 32px;
+    height: 2px;
+    left: -3rem;
+    top: 14px;
+  }
+
+  .about--list {
+    margin-bottom: 5rem;
+  }
+
+  .about--buttons {
+    justify-content: initial;
+  }
+
+  .button--ghost {
+    padding: .75rem;
+  }
+
+  .button--ghost i {
+    font-size: 1.5rem;
+  }
+
+  .services--container {
+    grid-template-columns: repeat(3, 282px);
+    column-gap: 5rem;
+    padding: 3rem 5rem;
+  }
+
+  .services--content {
+    padding: 6.5rem 1.5rem 3.5rem;
+    border: 6px solid var(--black-color);
+  }
+
+  .services--icon i {
+    font-size: 3rem;
+  }
+
+  .services--box {
+    width: 32px;
+    height: 32px;
+  }
+  .services--title{
+    margin-bottom: 1.5rem;
+  }
+  .services--card:hover .services--border{
+    transform: translate(1.25rem, 1.25rem);
+  }
+  .projects--container{
+    grid-template-columns: repeat(3,352px);
+    padding-block: 3rem 1rem;
+  }
+  .projects--card{
+    padding: 1.25rem 1.25rem 2.5rem;
+  }
+  .projects--image{
+    margin-bottom: 1rem;
+  }
+  .projects--content{
+    margin-bottom: 2rem;
+  }
+
+  .projects--button{
+    right: 1.25rem;
+  }
+
+  .contact--container{
+    grid-template-columns: 440px 670px;
+    grid-template-rows: initial;
+    padding-bottom: 2rem;
+  }
+.contact--mail{
+  grid-column: 2/3;
+  grid-row: 1/3;
+  padding: 7rem 5.5rem 6rem 7.5rem;
+  margin-top: 0;
+}
+.contact--title{
+  font-size: var(--h3-font-size);
+  text-align: initial;
+}
+.contact--form .contact--area{
+  height: 11rem;
+}
+.contact--button{
+  margin-top: 1.25rem;
+  width: max-content;
+}
+.contact--data{
+  width: 392px;
+  height: 375px;
+  padding: 4.5rem 3.5rem 3.5rem;
+  margin: 7.5rem 0 0 8rem;
+  border-bottom: 6px solid var(--first-color);
+}
+.contact--data .section--title-2{
+  margin: 0 0 2rem;
+  transform: translateX(-6.5rem);
+}
+.contact--social{
+  margin-left: 8rem;
+  text-align: initial;
+}
+.contact--social-data{
+  flex-direction: row;
+  align-items: center;
+  column-gap: 1.25rem;
+}
+.footer--container{
+  padding-block: 4rem;
+  grid-template-columns:repeat(2, max-content) ;
+  justify-content: space-between;
+}
+.footer--link{
+  column-gap: 3rem;
+  order: 1;
+}
+.scrollup{
+  right: 3rem;
+}
+}
